fix(tools): make RealCodeTools Java 11 compatible